--- a/templates/report/accounts-edit.html.twig
+++ b/templates/report/accounts-edit.html.twig
@@ -90,6 +90,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <form method="post" action="/accounts-edit?aid={{ parameters.aid }}" class="form-horizontal">
+                        <input type="hidden" name="_token" value="{{ csrf_token('account_edit_form') }}">
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <div class="form-group">
